[package]
name = "anti-wobble"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
1_151 = []
1_163 = []

[dependencies]
mmap-rs = "0.6.*"

[dependencies.windows]
version = "0.*"
features = [
    "Win32_Foundation",
    "Win32_System_SystemServices",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_System_Memory",
]
